# Dynabolic-RE

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.bat
docs/: README.md
dynabolic_llm/: __init__.py  __main__.py  cli.py  extractor.py  provider.py  solver.py
dynabolic_llm/prompts/: extract.txt  verbalize.txt
dynabolic_re/: __init__.py  __main__.py  cli.py  extractor.py  pipeline.py  provider.py  solver.py  verbalizer.py
examples/: aegis_emergency.py  demo.cpp  legal_inheritance.py  medical_diagnosis.py  security_clearance.py  tweety_penguin.py
include/: graph_node.hpp  json_parser.hpp  object_pool.hpp  reasoning_engine.hpp
src/: graph_node.cpp  json_parser.cpp  reasoning_engine.cpp
tests/: CMakeLists.txt  test_dynabolic_llm.py  test_dynabolic_re.py  test_graph.cpp  test_solver.sh  test_tms.hpp
tools/: README.md  dynabolic_solver.cpp
